--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <body>
       <div id='pageContainer'>
         <header id='pageHeader'>
-          <h1>Test Application</h1>
-          <h2>Welcome to WiserTogether test Backbone application.</h2>
+          <h2>Test Application</h2>
+          <p>Welcome to WiserTogether test Backbone application.</p>
         </header>
 
-        <section id ='pageSection'>
-        </section>
+        <div id ='pageSection'>
+        </div>
       </div>
     </body>
 </html>
