--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Test Application Page</title>
-      <script data-main="apps/main" src="lib/require.js"></script>
-    </head>
-    <body>
-      <div id='pageContainer'>
-        <header id='pageHeader'>
-          <h2>Test Application</h2>
-          <p>Welcome to WiserTogether test Backbone application.</p>
-        </header>
-
-        <div id ='pageSection'>
-        </div>
+  <head>
+    <title>Conditon Treatments</title>
+    <script data-main="apps/main" src="lib/require.js"></script>
+  </head>
+  <body>
+    <div id='pageContainer'>
+      <header id='pageHeader'>
+        Header Content
+      </header>
+      <div id='contentContainer'>
+        <nav id='pageNav'></nav>
+        <section id='pageSection'>
+        </section>
       </div>
-    </body>
+      <footer id="pageFooter"> Footer Content</footer>
+    </div>
+  </body>
 </html>
