--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Conditon Treatments</title>
-    <script data-main="apps/main" src="lib/require.js"></script>
+    <meta charset='utf-8'>
+    <script data-main='apps/main' src='lib/require.js'></script>
   </head>
   <body>
     <div id='pageContainer'>
@@ -14,7 +15,7 @@
         <section id='pageSection'>
         </section>
       </div>
-      <footer id="pageFooter"> Footer Content</footer>
+      <footer id='pageFooter'> Footer Content</footer>
     </div>
   </body>
 </html>
