--- a/test/spec_runner.html
+++ b/test/spec_runner.html
@@ -1,13 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC '-//W3C//DTD HTML 4.01 Transitional//EN'
+  'http://www.w3.org/TR/html4/loose.dtd'>
 <html>
 <head>
   <title>Jasmine Spec Runner</title>
-
-  <link rel="stylesheet" type="text/css" href="lib/jasmine/jasmine.css">
-  <script type="text/javascript" src="../lib/require.js" data-main="spec_runner"></script>
+  <meta charset='utf-8'>
+  <link rel='stylesheet' type='text/css' href='lib/jasmine/jasmine.css'>
+  <script type='text/javascript' src='../lib/require.js' data-main='spec_runner'></script>
 </head>
 <body>
-
+  <div id='sandbox'></div>
 </body>
 </html>
