Change application structure
* Move app to js
* Add some jasmine specs
* PENDING: Check why hbs is trying to make a cross domain call

--- a/test/spec_runner.html
+++ b/test/spec_runner.html
@@ -4,8 +4,8 @@
 <head>
   <title>Jasmine Spec Runner</title>
   <meta charset='utf-8'>
-  <link rel='stylesheet' type='text/css' href='lib/jasmine/jasmine.css'>
-  <script type='text/javascript' src='../lib/require.js' data-main='spec_runner'></script>
+  <link rel='stylesheet' type='text/css' href='lib/jasmine.css'>
+  <script type='text/javascript' src='../js/lib/require.js' data-main='spec_runner'></script>
 </head>
 <body>
   <div id='sandbox'></div>
