--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Conditon Treatments</title>
     <meta charset='utf-8'>
-    <script data-main='apps/main' src='lib/require.js'></script>
+    <script data-main='js/main' src='js/lib/require.js'></script>
   </head>
   <body>
     <div id='pageContainer'>
